deal part completed

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
               <!-- modal -->      
               <button class="btn btn-ghost text-[#F85559]" onclick="my_modal_6.showModal()">Details</button>
-              <dialog id="my_modal_6" class="modal max-w-sm modal-middle ">
+              <dialog id="my_modal_6" class="modal modal-bottom sm:modal-middle">
                 <form method="dialog" class="modal-box">
                   <div class="flex flex-col justify-center items-center">
                     <img src="/images/fruit6.png" alt="apple" class="rounded-xl" />
@@ -241,7 +241,7 @@
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title border-b-2">12.90$ - 18.85$</h2>
-              <p>Apples</p>
+              <p>Orange</p>
               <!-- ratings -->
               <div class="rating rating-lg rating-half">
                 <input type="radio" name="rating-10" class="rating-hidden" />
@@ -259,11 +259,11 @@
 
               <!-- modal -->      
               <button class="btn btn-ghost text-[#F85559]" onclick="my_modal_7.showModal()">Details</button>
-              <dialog id="my_modal_7" class="modal max-w-sm modal-bottom sm:modal-middle ">
+              <dialog id="my_modal_7" class="modal modal-bottom sm:modal-middle">
                 <form method="dialog" class="modal-box">
                   <div class="flex flex-col justify-center items-center">
                     <img src="/images/fruit7.png" alt="apple" class="rounded-xl" />
-                    <h3 class="font-bold text-lg text-center">Apples</h3>
+                    <h3 class="font-bold text-lg text-center">Orange</h3>
                     <p class="py-4 text-center">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                     <!-- ratings -->
                     <div class="rating rating-lg rating-half">
@@ -297,7 +297,7 @@
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title border-b-2">12.90$ - 18.85$</h2>
-              <p>Apples</p>
+              <p>Red Dragon</p>
               <!-- ratings -->
               <div class="rating rating-lg rating-half">
                 <input type="radio" name="rating-10" class="rating-hidden" />
@@ -315,11 +315,11 @@
 
               <!-- modal -->      
               <button class="btn btn-ghost text-[#F85559]" onclick="my_modal_8.showModal()">Details</button>
-              <dialog id="my_modal_8" class="modal max-w-sm modal-bottom sm:modal-middle ">
+              <dialog id="my_modal_8" class="modal modal-bottom sm:modal-middle ">
                 <form method="dialog" class="modal-box">
                   <div class="flex flex-col justify-center items-center">
                     <img src="/images/fruit8.png" alt="apple" class="rounded-xl" />
-                    <h3 class="font-bold text-lg text-center">Apples</h3>
+                    <h3 class="font-bold text-lg text-center">Red Dragon</h3>
                     <p class="py-4 text-center">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                     <!-- ratings -->
                     <div class="rating rating-lg rating-half">
@@ -353,7 +353,7 @@
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title border-b-2">12.90$ - 18.85$</h2>
-              <p>Apples</p>
+              <p>Banana</p>
               <!-- ratings -->
               <div class="rating rating-lg rating-half">
                 <input type="radio" name="rating-10" class="rating-hidden" />
@@ -371,11 +371,11 @@
 
               <!-- modal -->      
               <button class="btn btn-ghost text-[#F85559]" onclick="my_modal_9.showModal()">Details</button>
-              <dialog id="my_modal_9" class="modal max-w-sm modal-bottom sm:modal-middle ">
+              <dialog id="my_modal_9" class="modal modal-bottom sm:modal-middle ">
                 <form method="dialog" class="modal-box">
                   <div class="flex flex-col justify-center items-center">
-                    <img src="/images/fruit6.png" alt="apple" class="rounded-xl" />
-                    <h3 class="font-bold text-lg text-center">Apples</h3>
+                    <img src="/images/fruit9.png" alt="apple" class="rounded-xl" />
+                    <h3 class="font-bold text-lg text-center">Banana</h3>
                     <p class="py-4 text-center">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                     <!-- ratings -->
                     <div class="rating rating-lg rating-half">
@@ -403,6 +403,11 @@
             </div>
           </div>
        </div>
+       <div class="flex justify-center mt-12">
+        <button class="btn bg-[#F85559] text-white" >Shop All</button>
+       </div>
+
+       
 
       </section>
 
