--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
             </div>
             <div class="navbar-center flex items-center">
               <img class="mr-3" src="images/logo.png" alt="#">
-              <h2 class="text-white text-4xl font-semibold" >Fruit Burst</h2>
+              <h2 class=" text-black lg:text-white lg:text-4xl font-semibold" >Fruit Burst</h2>
       
             </div>
             <div class="navbar-end relative">
-              <input class="w-60 h-10 rounded-full pl-3" type="search" name="" id="" placeholder="Search here" >
-              <span class="absolute right-3"><i class="fa-solid fa-magnifying-glass"></i></span>
+              <input class="w-60 h-10 rounded-full pl-3 hidden md:visible lg:visible" type="search" name="" id="" placeholder="Search here" >
+              <span class="absolute right-3 hidden md:visible lg:visible"><i class="fa-solid fa-magnifying-glass"></i></span>
             </div>
             <div class="dropdown">
-              <label tabindex="0" class="btn btn-ghost lg:hidden">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+              <label tabindex="0" class="btn btn-ghost ">
+                <svg  xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
               </label>
               <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                 <li><a>Home</a></li>
@@ -101,8 +101,8 @@
                 </div>
               </div>
                    <!-- Banner attachment part -->
-              <section class="absolute bg-[#FFF] max-w-screen-md h-auto left-48 top-96 z-0">
-                <div class="flex gap-5 justify-center items-center border-2 drop-shadow-xl px-10 ">
+              <section class="absolute bg-[#FFF] w-3/4 h-auto left-32 -bottom-24 z-0 hidden md:hidden lg:block">
+                <div class="grid grid-cols-6 gap-5 justify-center items-center border-2 drop-shadow-xl px-10">
                   <div>
                     <img src="images/fruit1.png" alt="">
                     <p class="mt-5">Grape</p>
@@ -151,7 +151,7 @@
               </div>
             </div>
                  <!-- Banner attachment part -->
-            <section class="absolute bg-[#FFF] max-w-screen-md h-auto left-48 top-96 z-0">
+            <section class="absolute bg-[#FFF] max-w-screen-md h-auto left-48 top-96 z-0 hidden md:hidden lg:block">
               <div class="flex gap-5 justify-center items-center border-2 drop-shadow-xl px-10 ">
                 <div>
                   <img src="images/fruit1.png" alt="">
@@ -201,7 +201,7 @@
                 </div>
               </div>
                    <!-- Banner attachment part -->
-              <section class="absolute bg-[#FFF] max-w-screen-md h-auto left-48 top-96 z-0">
+              <section class="absolute bg-[#FFF] max-w-screen-md h-auto left-48 top-96 z-0 hidden md:hidden lg:block">
                 <div class="flex gap-5 justify-center items-center border-2 drop-shadow-xl px-10 ">
                   <div>
                     <img src="images/fruit1.png" alt="">
@@ -251,7 +251,7 @@
                 </div>
               </div>
                    <!-- Banner attachment part -->
-              <section class="absolute bg-[#FFF] max-w-screen-md h-auto left-48 top-96 z-0">
+              <section class="absolute bg-[#FFF] max-w-screen-md h-auto left-48 top-96 z-0 hidden md:hidden lg:block">
                 <div class="flex gap-5 justify-center items-center border-2 drop-shadow-xl px-10 ">
                   <div>
                     <img src="images/fruit1.png" alt="">
